# messenger

./: .gitignore  README.md  client.sh  logs  prezentazia.pptx  server.sh  types messages  zeroversion.cpp
client/: CMakeLists.txt
client/qml/: Chats.qml  Header.qml  LogRegWindow.qml
client/src/: main.cpp  main.h  sha256.cpp  user.cpp  user.h
server/: CMakeLists.txt  zeroversion.cpp
server/src/: database.cpp  database.h  main.cpp  main.h  message.cpp  message.h  serverThread.cpp  serverThread.h  sha256.h
